Make sure refresh icon is not hidden under status panel (#1928)

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -11,7 +11,7 @@
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
 
     &__item {
-        min-height: 90px;
+        height: 75px;
         margin: 10px 0;
         padding: 5px 20px;
         font-size: .8em;
